Styling panel description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@373 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5265,13 +5265,18 @@ body {
       display: inline-block;
       margin-top: 0;
       padding-top: 6px; }
+    .panels-display .panel-description h5.theme,
+    .panels-display .panel-description h5.secondary-theme {
+      padding-bottom: 0; }
     .panels-display .panel-description h5.theme + p,
     .panels-display .panel-description h5.secondary-theme + p {
-      display: inline-block;
+      display: block;
       padding: 6px 8px;
       background-color: #7a9945;
       color: #fff;
-      text-decoration: none; }
+      text-decoration: none;
+      margin-left: 20px;
+      clear: both; }
   .panels-display nav {
     position: absolute;
     top: 0;
