Styling panel description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@374 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5267,10 +5267,11 @@ body {
       padding-top: 6px; }
     .panels-display .panel-description h5.theme,
     .panels-display .panel-description h5.secondary-theme {
-      padding-bottom: 0; }
+      padding-bottom: 0;
+      display: block; }
     .panels-display .panel-description h5.theme + p,
     .panels-display .panel-description h5.secondary-theme + p {
-      display: block;
+      display: inline-block;
       padding: 6px 8px;
       background-color: #7a9945;
       color: #fff;
