--- a/css/panels.css
+++ b/css/panels.css
@@ -5401,6 +5401,13 @@ body {
     margin-right: 20px; }
   .panels-display nav {
     width: 40px; } }
+@media only screen and (max-width: 857px) {
+  .page.panels header #search-panels {
+    top: 45px;
+    right: 0;
+    background-color: #4d4e53; }
+    .page.panels header #search-panels input[type="submit"] {
+      margin-right: 7px; } }
 @media only screen and (max-width: 767px) {
   .carousel-left-limit {
     display: none; }
@@ -5428,63 +5435,65 @@ body {
   .panels-display nav {
     width: 40px; } }
 @media only screen and (max-width: 40em) {
-  .page.panels {
-    /*
-     *
-     */ }
-    .page.panels header {
-      /* first level */
-      /* second level */ }
-      .page.panels header #nav {
-        position: relative;
-        top: auto;
-        left: auto; }
-      .page.panels header #nav > a {
-        width: 45px;
-        /* 50 */
-        height: 45px;
-        /* 50 */
-        text-align: left;
-        text-indent: -9999px;
-        background-color: #37c1d6;
-        position: relative; }
-      .page.panels header #nav > a:before,
-      .page.panels header #nav > a:after {
-        position: absolute;
-        border: 2px solid white;
-        top: 35%;
-        left: 25%;
-        right: 25%;
-        content: ''; }
-      .page.panels header #nav > a:after {
-        top: 60%; }
-      .page.panels header #nav:not(:target) > a:first-of-type,
-      .page.panels header #nav:target > a:last-of-type {
-        display: block; }
-      .page.panels header #nav > ul {
-        height: auto;
-        display: none;
-        position: absolute;
-        left: 0;
-        right: 0; }
-      .page.panels header #nav:target > ul {
-        display: block; }
-      .page.panels header #nav > ul > li {
-        width: 100%;
-        float: none; }
-      .page.panels header #nav > ul > li > a {
-        height: auto;
-        text-align: left;
-        padding: 0 0.833em;
-        /* 20 (24) */ }
-      .page.panels header #nav > ul > li:not(:last-child) > a {
-        border-right: none;
-        border-bottom: 1px solid #cc470d; }
-      .page.panels header #nav li ul {
-        position: static;
-        padding: 1.25em;
-        /* 20 */
-        padding-top: 0; }
+  .page.panels header {
+    /* first level */
+    /* second level */ }
+    .page.panels header #search-panels {
+      top: -1px;
+      right: 45px;
+      background-color: none; }
+      .page.panels header #search-panels input[type="submit"] {
+        margin-right: 0; }
+    .page.panels header #nav {
+      position: relative;
+      top: auto;
+      left: auto; }
+    .page.panels header #nav > a {
+      width: 45px;
+      /* 50 */
+      height: 45px;
+      /* 50 */
+      text-align: left;
+      text-indent: -9999px;
+      background-color: #37c1d6;
+      position: relative; }
+    .page.panels header #nav > a:before,
+    .page.panels header #nav > a:after {
+      position: absolute;
+      border: 2px solid white;
+      top: 35%;
+      left: 25%;
+      right: 25%;
+      content: ''; }
+    .page.panels header #nav > a:after {
+      top: 60%; }
+    .page.panels header #nav:not(:target) > a:first-of-type,
+    .page.panels header #nav:target > a:last-of-type {
+      display: block; }
+    .page.panels header #nav > ul {
+      height: auto;
+      display: none;
+      position: absolute;
+      left: 0;
+      right: 0; }
+    .page.panels header #nav:target > ul {
+      display: block; }
+    .page.panels header #nav > ul > li {
+      width: 100%;
+      float: none; }
+    .page.panels header #nav > ul > li > a {
+      height: auto;
+      text-align: left;
+      padding: 0 0.833em;
+      /* 20 (24) */ }
+    .page.panels header #nav > ul > li:not(:last-child) > a {
+      border-right: none;
+      border-bottom: 1px solid #cc470d; }
+    .page.panels header #nav li ul {
+      position: static;
+      padding: 1.25em;
+      /* 20 */
+      padding-top: 0; }
 
   .panels-display {
     height: 400px !important; }
