Making search responsive.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@434 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5073,7 +5073,9 @@ body {
         height: 16px;
         background-color: #727375;
         border: 1px solid #a6a6a8;
-        color: white; }
+        color: white;
+        width: 140px;
+        margin-left: 20px; }
       .page.panels header #search-panels input[type="submit"] {
         color: white;
         background-color: #1faac0;
