--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -263,6 +263,8 @@ body {
 				background-color: $grayLighter;
 				border: 1px solid $grayLight;
 				color: $white;
+				width: 140px;
+				margin-left: 20px;
 			}
 			
 			input[type="submit"] {
