update old interview home page markup for pathways
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@436 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6118,15 +6118,15 @@ a.signale {
 .warburg-institute img {
   margin-bottom: 15px; }
 
-/* Interviews */
+/* Pathways */
 /*------------------------------*/
-.interview {
+.pathway {
   content: "";
   display: table;
   clear: both;
   padding: 15px 0;
-  background: url("../images/interview-bg.png") no-repeat bottom; }
-  .interview img {
+  background: url("../images/pathway-bg.png") no-repeat bottom; }
+  .pathway img {
     border: 1px solid #c8c8c8;
     float: left;
     margin-right: 10px; }
