--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -120,6 +120,7 @@ a.signale {
 	clear: both;
 	padding: 15px 0;
 	background: url("../images/pathway-bg.png") no-repeat bottom;
+	width: 100%;
 	img { 
 		border: 1px solid #c8c8c8; // TODO: Add variable; change to global rule for images to have border?
 		float: left;
