update old interview home page markup for pathways
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@438 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6125,7 +6125,8 @@ a.signale {
   display: table;
   clear: both;
   padding: 15px 0;
-  background: url("../images/pathway-bg.png") no-repeat bottom; }
+  background: url("../images/pathway-bg.png") no-repeat bottom;
+  width: 100%; }
   .pathway img {
     border: 1px solid #c8c8c8;
     float: left;
