--- a/css/content.css
+++ b/css/content.css
@@ -5988,8 +5988,6 @@ footer {
       font-size: 1.1875em; }
       footer ul.footer-nav li .divider {
         padding: 0 5px; }
-    footer ul.footer-nav a {
-      color: #4d4e53; }
     footer ul.footer-nav li.active {
       color: #a7c03a; }
       footer ul.footer-nav li.active a {
@@ -5998,6 +5996,8 @@ footer {
         color: #4d4e53; }
   footer p {
     font-size: 1.125em; }
+  footer a {
+    color: #4d4e53; }
 
 .institution-logos,
 .social-icons {
