--- a/css/content.css
+++ b/css/content.css
@@ -6177,7 +6177,9 @@ p.caption {
 
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
-    width: 940px; } }
+    width: 940px; }
+  .navbar .subtitle {
+    font-size: 1em; } }
 @media (min-width: 768px) and (max-width: 979px) {
   body {
     font-size: 90%; }
