--- a/css/content/_responsive-980px-1199px.scss
+++ b/css/content/_responsive-980px-1199px.scss
@@ -6,5 +6,6 @@
 @media (min-width: 980px) and (max-width: 1199px) {
 	.navbar {
 		.container { width: 940px; }
+		.subtitle { font-size: 1em; }
 	}
 }
