--- a/css/content.css
+++ b/css/content.css
@@ -6179,7 +6179,10 @@ p.caption {
   .navbar .container {
     width: 940px; }
   .navbar .subtitle {
-    font-size: 1em; } }
+    font-size: 1em; }
+
+  .hero .home-content {
+    padding-left: 3%; } }
 @media (min-width: 768px) and (max-width: 979px) {
   body {
     font-size: 90%; }
