--- a/css/content.css
+++ b/css/content.css
@@ -6182,7 +6182,10 @@ p.caption {
     font-size: 1em; }
 
   .hero .home-content {
-    padding-left: 3%; } }
+    padding-left: 3%; }
+
+  .btn-pathway {
+    font-size: 1.8em; } }
 @media (min-width: 768px) and (max-width: 979px) {
   body {
     font-size: 90%; }
