--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -8,7 +8,7 @@
 	background-position: center 14px;
 	.home-content {
 		float: left;
-		padding-left: 16.4583333%;
+		padding-left: 7%;
 		padding-top: 73px;
 		/*width: 62.3611111% minus padding 16.4583333%;*/
 		width: 43%;
