--- a/css/content.css
+++ b/css/content.css
@@ -6018,7 +6018,7 @@ footer {
   background-position: center 14px; }
   .hero .home-content {
     float: left;
-    padding-left: 16.4583333%;
+    padding-left: 7%;
     padding-top: 73px;
     /*width: 62.3611111% minus padding 16.4583333%;*/
     width: 43%;
