--- a/css/content.css
+++ b/css/content.css
@@ -6277,3 +6277,6 @@ p.caption {
 @media (max-width: 480px) {
   .navbar .brand {
     margin-left: -15px; } }
+@media (min-width: 1372px) {
+  .hero .home-content {
+    padding-left: 15%; } }
