--- a/css/content/_responsive-980px-1199px.scss
+++ b/css/content/_responsive-980px-1199px.scss
@@ -8,8 +8,8 @@
 		.container { width: 940px; }
 		.subtitle { font-size: 1em; }
 	}
-	.hero {
-		.home-content { padding-left: 3%; }
-	}
-	.btn-pathway { font-size: 1.8em; }
+	// .hero {
+	// 	.home-content { padding-left: 3%; }
+	// }
+	// .btn-pathway { font-size: 1.8em; }
 }
