responsive for home page hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@453 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6224,7 +6224,10 @@ p.caption {
       background-image: none; }
 
   .container {
-    padding: 0 10px; } }
+    padding: 0 10px; }
+
+  .book-cover {
+    width: 90%; } }
 @media (max-width: 480px) {
   .navbar .brand {
     margin-left: -15px; } }
