--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 983px) {
 	.hero{
-		.content { 
+		.home-content { 
 			padding-left: 5%;
 			h2 {
 				width: 430px;
@@ -39,7 +39,7 @@
 
 @media screen and (max-width: 866px) {
 	.hero {
-		.content {
+		.home-content {
 			h2 {
 				width: 320px;
 				font-size: 2.6em;
@@ -60,7 +60,7 @@
 	
 	.hero {
 		width: 100%;
-		.content {
+		.home-content {
 			padding-left: 5%;
 			width: 95%;
 			opacity: 1;
