--- a/css/content.css
+++ b/css/content.css
@@ -6320,4 +6320,4 @@ p.caption {
     display: inline-block;
     font-size: 1.3em;
     opacity: .6;
-    margin-left: 0; } }
+    margin-left: 6px; } }
