responsive for home page hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@456 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6230,7 +6230,13 @@ p.caption {
     width: 90%; } }
 @media (max-width: 480px) {
   .navbar .brand {
-    margin-left: -15px; } }
+    margin-left: -15px; }
+
+  .featured-content-first {
+    clear: both; }
+
+  .media {
+    background-image: none; } }
 @media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 15%; } }
