--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -6,5 +6,7 @@
 	.navbar {
 		.brand { margin-left: -15px; }
 	}
+	.featured-content-first { clear: both; }
+	.media { background-image: none; }
 }
 
