responsive for home page hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@457 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-767px-max.scss
+++ b/css/content/_responsive-767px-max.scss
@@ -27,57 +27,6 @@
 	}
 	.container { padding: 0 10px; }
 	.book-cover { width: 90%; }
-	// .hero {
-	// 	width: 100%;
-	// 	.content {
-	// 		padding-left: 5%;
-	// 		width: 95%;
-	// 		opacity: 1;
-	// 		h2 { width: 75%; }
-	// 		p { width: 85%; }
-	// 	}
-	// 	aside {
-	// 		float: left;
-	// 		width: 100%;
-	// 		height: auto;
-	// 		margin-top: 48px;
-	// 		opacity: 1;
-	// 		a {
-	// 			display: inline;
-	// 			margin-left: 33px; }
-	// 		p {
-	// 			float: left;
-	// 			width: 65%;
-	// 			margin-left: 10px; }
-	// 		a.cup {
-	// 			display: block;
-	// 		 	font-size: 1.3em;
-	// 			opacity: .6;
-	// 			margin-left: 0;
-	// 			margin-bottom: 15px;
-	// 			margin-top: 20px;
-	// 		}
-	// 		a.signale {
-	// 			display: inline-block;
-	// 			font-size: 1.3em;
-	// 			opacity: .6;
-	// 			margin-left: 0; }
-	// 	}
-	// }
-	// .book-cover {
-	// 	margin-top: 22px;
-	// 	width: 25%;
-	// 	float: left;
-	// 	padding-left: 5%;
-	// 	padding-bottom: 20px;
-	// }
-	
-	
-	// .hero .content ul {
-	// 	margin-top: 7px;
-	// }
-
-	// .hero aside 
-	// }
+	.media { background-image: none; }
 }
 
