--- a/css/content.css
+++ b/css/content.css
@@ -6227,16 +6227,16 @@ p.caption {
     padding: 0 10px; }
 
   .book-cover {
-    width: 90%; } }
+    width: 90%; }
+
+  .media {
+    background-image: none; } }
 @media (max-width: 480px) {
   .navbar .brand {
     margin-left: -15px; }
 
   .featured-content-first {
-    clear: both; }
-
-  .media {
-    background-image: none; } }
+    clear: both; } }
 @media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 15%; } }
