responsive for home page hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@458 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -61,6 +61,8 @@ footer {
 .institution-logos,
 .social-icons {
 	margin: 20px 0;
-	img { padding: 0 5px; }
+	img { 
+		padding: 0 5px;
+		margin-bottom: 5px; }
 }
 .signale-logo { margin-top: .5em; }
