--- a/css/content.css
+++ b/css/content.css
@@ -6004,7 +6004,8 @@ footer {
   margin: 20px 0; }
   .institution-logos img,
   .social-icons img {
-    padding: 0 5px; }
+    padding: 0 5px;
+    margin-bottom: 5px; }
 
 .signale-logo {
   margin-top: .5em; }
