Fix patway icon.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@496 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_modules.scss
+++ b/css/panels/_modules.scss
@@ -17,7 +17,7 @@
 */
 @mixin panel-tool-states ( $name) {
   a.#{$name} {
-    background: url($pathPanelIcons + $name + '.png') 0 0;
+    background: url($pathPanelIcons + $name + '.png')  no-repeat 0 0;
 		margin-top: -4px;
   }
 
