First panel in carousel is hidden.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@500 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5113,7 +5113,7 @@ body {
   .rs-carousel ul li {
     margin-right: 0; }
     .rs-carousel ul li:first-child {
-      margin-left: 0; }
+      margin-left: 75px; }
     .rs-carousel ul li .panel-item a {
       position: relative;
       display: inline-block;
