--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -379,8 +379,8 @@ body {
 			margin-right: 0;
 			
 			&:first-child {
-				//margin-left: 75px;
-				margin-left: 0;
+				margin-left: 75px;
+				//margin-left: 0;
 			}
 
 			.panel-item {
