fix tag themes width
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@503 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5292,7 +5292,7 @@ body {
       text-decoration: none;
       margin-left: 20px;
       clear: both;
-      width: 80%; }
+      width: auto; }
   .panels-display nav {
     position: absolute;
     top: 0;
