update responsive styles for home page hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@507 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -4,10 +4,20 @@
 	}
 }
 
+@media (max-width: 1147px) {
+	.hero {
+		.home-content { 
+			padding-left: 15%;
+			padding-top: 50px;
+			p { width: 550px; }
+		}
+	}
+}
+
 @media screen and (max-width: 983px) {
 	.hero{
 		.home-content { 
-			padding-left: 5%;
+			padding-left: 10%;
 			h2 {
 				width: 430px;
 				font-size: 2.7em;
