--- a/css/content.css
+++ b/css/content.css
@@ -6302,9 +6302,15 @@ p.caption {
 @media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 15%; } }
+@media (max-width: 1147px) {
+  .hero .home-content {
+    padding-left: 15%;
+    padding-top: 50px; }
+    .hero .home-content p {
+      width: 550px; } }
 @media screen and (max-width: 983px) {
   .hero .home-content {
-    padding-left: 5%; }
+    padding-left: 10%; }
     .hero .home-content h2 {
       width: 430px;
       font-size: 2.7em;
