update brand responsive
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@508 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-768px-979px.scss
+++ b/css/content/_responsive-768px-979px.scss
@@ -6,7 +6,7 @@
 	body { font-size: 90%; }
 	.navbar {
 		.container { width: 724px; }
-		.brand { font-size: 6em; }
+		//.brand { font-size: 6em; }
 		.nav {
 			li {
 				a { font-size: 1em; }
