--- a/css/content.css
+++ b/css/content.css
@@ -5865,6 +5865,14 @@ h2 {
   font-size: 1.625em;
   margin-top: 1.5em; }
 
+/* Images */
+/*------------------------------*/
+img.pull-left {
+  margin: 0 20px 20px 0; }
+
+img.pull-right {
+  margin: 0 0 20px 20px; }
+
 /* Icons */
 /*------------------------------*/
 .icon-arrow {
