--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -36,6 +36,13 @@ h2 {
 		margin-top: 1.5em; }
 }
 
+/* Images */
+/*------------------------------*/
+img.pull-left {
+	margin: 0 20px 20px 0; }
+img.pull-right {
+	margin: 0 0 20px 20px; }
+
 /* Icons */
 /*------------------------------*/
 .icon-arrow {
