--- a/css/content.css
+++ b/css/content.css
@@ -5873,6 +5873,9 @@ img.pull-left {
 img.pull-right {
   margin: 0 0 20px 20px; }
 
+.cover {
+  width: 200px; }
+
 /* Icons */
 /*------------------------------*/
 .icon-arrow {
