--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -42,6 +42,7 @@ img.pull-left {
 	margin: 0 20px 20px 0; }
 img.pull-right {
 	margin: 0 0 20px 20px; }
+.cover { width: 200px; }
 
 /* Icons */
 /*------------------------------*/
