--- a/css/content.css
+++ b/css/content.css
@@ -5858,7 +5858,10 @@ h2 {
   margin: 0;
   color: white; }
 
-.main-content p, .main-content li {
+.main-content p {
+  font-size: 1.4375em;
+  line-height: 1.4em; }
+.main-content li {
   font-size: 1.4375em;
   line-height: 1.2em; }
 .main-content h3 {
