--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -28,7 +28,10 @@ h2 {
 	color: $textColorLight; }
 
 .main-content {
-	p, li { 
+	p { 
+		font-size: 1.4375em;
+		line-height: 1.4em; }
+	li { 
 		font-size: 1.4375em;
 		line-height: 1.2em; }
 	h3 { 
