add hover state for home page button links
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@536 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6138,6 +6138,11 @@ footer {
   margin-left: 3px;
   color: white; }
 
+.btn-pathway:hover,
+.btn-panels:hover {
+  background-color: #005580;
+  color: white; }
+
 .book-cover {
   margin-top: 22px; }
 
