update hover colors and add variable
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@537 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5842,7 +5842,8 @@ a {
   color: #a7c03a; }
 
 a:hover {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #005580; }
 
 /* Typography */
 /*------------------------------*/
