--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -57,7 +57,7 @@
 	color: $textColorLight; }
 .btn-pathway:hover,
 .btn-panels:hover {
-	background-color: #005580;
+	background-color: $linkHover;
 	color: $textColorLight; }
 .book-cover {
 	margin-top: 22px;
