--- a/css/content/_variables.scss
+++ b/css/content/_variables.scss
@@ -15,8 +15,8 @@ $textColorLight: white;
 // $lightGray: #bebebe;
 // $mediumGray: #a2a1a1;
 
-$linkPrimary: #a7c03a; // TODO: may need to rename this if green is not actually the link color
-
+$linkPrimary: #a7c03a;
+$linkHover: #005580;
 
 // Fonts
 // -------------------------
