--- a/css/panels.css
+++ b/css/panels.css
@@ -35,7 +35,7 @@ html {
   -ms-text-size-adjust: 100%; }
 
 a:focus {
-  outline: thin dotted #333333;
+  outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px; }
 
@@ -124,7 +124,7 @@ textarea {
 @media print {
   * {
     text-shadow: none !important;
-    color: black !important;
+    color: #000 !important;
     background: transparent !important;
     box-shadow: none !important; }
 
@@ -145,7 +145,7 @@ textarea {
 
   pre,
   blockquote {
-    border: 1px solid #999999;
+    border: 1px solid #999;
     page-break-inside: avoid; }
 
   thead {
@@ -195,7 +195,7 @@ a:focus {
 .img-polaroid {
   padding: 4px;
   background-color: #fff;
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
@@ -725,7 +725,7 @@ pre {
   white-space: pre;
   white-space: pre-wrap;
   background-color: #f5f5f5;
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -910,7 +910,7 @@ select:focus,
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  outline: thin dotted #333333;
+  outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px; }
 
@@ -1322,7 +1322,7 @@ select:focus:invalid {
     text-align: center;
     text-shadow: 0 1px 0 white;
     background-color: #eeeeee;
-    border: 1px solid #cccccc; }
+    border: 1px solid #ccc; }
   .input-append .add-on,
   .input-append .btn,
   .input-append .btn-group > .dropdown-toggle,
@@ -1772,19 +1772,19 @@ table th[class*="span"],
   background-image: url(image-path("glyphicons-halflings-white.png")); }
 
 .icon-glass {
-  background-position: 0 0; }
+  background-position: 0      0; }
 
 .icon-music {
-  background-position: -24px 0; }
+  background-position: -24px  0; }
 
 .icon-search {
-  background-position: -48px 0; }
+  background-position: -48px  0; }
 
 .icon-envelope {
-  background-position: -72px 0; }
+  background-position: -72px  0; }
 
 .icon-heart {
-  background-position: -96px 0; }
+  background-position: -96px  0; }
 
 .icon-star {
   background-position: -120px 0; }
@@ -1832,19 +1832,19 @@ table th[class*="span"],
   background-position: -456px 0; }
 
 .icon-home {
-  background-position: 0 -24px; }
+  background-position: 0      -24px; }
 
 .icon-file {
-  background-position: -24px -24px; }
+  background-position: -24px  -24px; }
 
 .icon-time {
-  background-position: -48px -24px; }
+  background-position: -48px  -24px; }
 
 .icon-road {
-  background-position: -72px -24px; }
+  background-position: -72px  -24px; }
 
 .icon-download-alt {
-  background-position: -96px -24px; }
+  background-position: -96px  -24px; }
 
 .icon-download {
   background-position: -120px -24px; }
@@ -1892,19 +1892,19 @@ table th[class*="span"],
   background-position: -456px -24px; }
 
 .icon-tag {
-  background-position: 0 -48px; }
+  background-position: 0      -48px; }
 
 .icon-tags {
-  background-position: -25px -48px; }
+  background-position: -25px  -48px; }
 
 .icon-book {
-  background-position: -48px -48px; }
+  background-position: -48px  -48px; }
 
 .icon-bookmark {
-  background-position: -72px -48px; }
+  background-position: -72px  -48px; }
 
 .icon-print {
-  background-position: -96px -48px; }
+  background-position: -96px  -48px; }
 
 .icon-camera {
   background-position: -120px -48px; }
@@ -1952,19 +1952,19 @@ table th[class*="span"],
   background-position: -456px -48px; }
 
 .icon-pencil {
-  background-position: 0 -72px; }
+  background-position: 0      -72px; }
 
 .icon-map-marker {
-  background-position: -24px -72px; }
+  background-position: -24px  -72px; }
 
 .icon-adjust {
-  background-position: -48px -72px; }
+  background-position: -48px  -72px; }
 
 .icon-tint {
-  background-position: -72px -72px; }
+  background-position: -72px  -72px; }
 
 .icon-edit {
-  background-position: -96px -72px; }
+  background-position: -96px  -72px; }
 
 .icon-share {
   background-position: -120px -72px; }
@@ -2012,19 +2012,19 @@ table th[class*="span"],
   background-position: -456px -72px; }
 
 .icon-plus-sign {
-  background-position: 0 -96px; }
+  background-position: 0      -96px; }
 
 .icon-minus-sign {
-  background-position: -24px -96px; }
+  background-position: -24px  -96px; }
 
 .icon-remove-sign {
-  background-position: -48px -96px; }
+  background-position: -48px  -96px; }
 
 .icon-ok-sign {
-  background-position: -72px -96px; }
+  background-position: -72px  -96px; }
 
 .icon-question-sign {
-  background-position: -96px -96px; }
+  background-position: -96px  -96px; }
 
 .icon-info-sign {
   background-position: -120px -96px; }
@@ -2072,19 +2072,19 @@ table th[class*="span"],
   background-position: -456px -96px; }
 
 .icon-exclamation-sign {
-  background-position: 0 -120px; }
+  background-position: 0      -120px; }
 
 .icon-gift {
-  background-position: -24px -120px; }
+  background-position: -24px  -120px; }
 
 .icon-leaf {
-  background-position: -48px -120px; }
+  background-position: -48px  -120px; }
 
 .icon-fire {
-  background-position: -72px -120px; }
+  background-position: -72px  -120px; }
 
 .icon-eye-open {
-  background-position: -96px -120px; }
+  background-position: -96px  -120px; }
 
 .icon-eye-close {
   background-position: -120px -120px; }
@@ -2135,19 +2135,19 @@ table th[class*="span"],
   background-position: -456px -118px; }
 
 .icon-hdd {
-  background-position: 0 -144px; }
+  background-position: 0      -144px; }
 
 .icon-bullhorn {
-  background-position: -24px -144px; }
+  background-position: -24px  -144px; }
 
 .icon-bell {
-  background-position: -48px -144px; }
+  background-position: -48px  -144px; }
 
 .icon-certificate {
-  background-position: -72px -144px; }
+  background-position: -72px  -144px; }
 
 .icon-thumbs-up {
-  background-position: -96px -144px; }
+  background-position: -96px  -144px; }
 
 .icon-thumbs-down {
   background-position: -120px -144px; }
@@ -2231,7 +2231,7 @@ table th[class*="span"],
   margin: 2px 0 0;
   list-style: none;
   background-color: white;
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
   *border-right-width: 2px;
   *border-bottom-width: 2px;
@@ -2512,7 +2512,7 @@ button.close {
     -o-transition: background-position 0.1s linear;
     transition: background-position 0.1s linear; }
   .btn:focus {
-    outline: thin dotted #333333;
+    outline: thin dotted #333;
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px; }
   .btn.active, .btn:active {
@@ -3131,7 +3131,7 @@ input[type="submit"].btn {
   line-height: 14px; }
 
 .nav-tabs {
-  border-bottom: 1px solid #dddddd; }
+  border-bottom: 1px solid #ddd; }
 
 .nav-tabs > li {
   margin-bottom: -1px; }
@@ -3152,7 +3152,7 @@ input[type="submit"].btn {
 .nav-tabs > .active > a:focus {
   color: #555555;
   background-color: white;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default; }
 
@@ -3181,7 +3181,7 @@ input[type="submit"].btn {
   border-bottom: 0; }
 
 .nav-tabs.nav-stacked > li > a {
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0; }
@@ -3296,7 +3296,7 @@ input[type="submit"].btn {
   display: block; }
 
 .tabs-below > .nav-tabs {
-  border-top: 1px solid #dddddd; }
+  border-top: 1px solid #ddd; }
 
 .tabs-below > .nav-tabs > li {
   margin-top: -1px;
@@ -3313,7 +3313,7 @@ input[type="submit"].btn {
 .tabs-below > .nav-tabs > .active > a,
 .tabs-below > .nav-tabs > .active > a:hover,
 .tabs-below > .nav-tabs > .active > a:focus {
-  border-color: transparent #dddddd #dddddd #dddddd; }
+  border-color: transparent #ddd #ddd #ddd; }
 
 .tabs-left > .nav-tabs > li,
 .tabs-right > .nav-tabs > li {
@@ -3328,7 +3328,7 @@ input[type="submit"].btn {
 .tabs-left > .nav-tabs {
   float: left;
   margin-right: 19px;
-  border-right: 1px solid #dddddd; }
+  border-right: 1px solid #ddd; }
 
 .tabs-left > .nav-tabs > li > a {
   margin-right: -1px;
@@ -3343,13 +3343,13 @@ input[type="submit"].btn {
 .tabs-left > .nav-tabs .active > a,
 .tabs-left > .nav-tabs .active > a:hover,
 .tabs-left > .nav-tabs .active > a:focus {
-  border-color: #dddddd transparent #dddddd #dddddd;
+  border-color: #ddd transparent #ddd #ddd;
   *border-right-color: white; }
 
 .tabs-right > .nav-tabs {
   float: right;
   margin-left: 19px;
-  border-left: 1px solid #dddddd; }
+  border-left: 1px solid #ddd; }
 
 .tabs-right > .nav-tabs > li > a {
   margin-left: -1px;
@@ -3364,7 +3364,7 @@ input[type="submit"].btn {
 .tabs-right > .nav-tabs .active > a,
 .tabs-right > .nav-tabs .active > a:hover,
 .tabs-right > .nav-tabs .active > a:focus {
-  border-color: #dddddd #dddddd #dddddd transparent;
+  border-color: #ddd #ddd #ddd transparent;
   *border-left-color: white; }
 
 .nav > .disabled > a {
@@ -3645,7 +3645,7 @@ input[type="submit"].btn {
   display: inline-block;
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-bottom: 7px solid #cccccc;
+  border-bottom: 7px solid #ccc;
   border-bottom-color: rgba(0, 0, 0, 0.2);
   position: absolute;
   top: -7px;
@@ -3661,7 +3661,7 @@ input[type="submit"].btn {
   left: 10px; }
 
 .navbar-fixed-bottom .nav > li > .dropdown-menu:before {
-  border-top: 7px solid #cccccc;
+  border-top: 7px solid #ccc;
   border-top-color: rgba(0, 0, 0, 0.2);
   border-bottom: 0;
   bottom: -7px;
@@ -3986,7 +3986,7 @@ input[type="submit"].btn {
   display: inline-block;
   padding: 5px 14px;
   background-color: #fff;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px; }
@@ -4036,9 +4036,9 @@ input[type="submit"].btn {
   width: 560px;
   margin-left: -280px;
   background-color: white;
-  border: 1px solid #999999;
+  border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
-  *border: 1px solid #999999;
+  *border: 1px solid #999;
   /* IE6-7 */
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -4061,7 +4061,7 @@ input[type="submit"].btn {
 
 .modal-header {
   padding: 9px 15px;
-  border-bottom: 1px solid #eeeeee; }
+  border-bottom: 1px solid #eee; }
   .modal-header .close {
     margin-top: 2px; }
   .modal-header h3 {
@@ -4082,7 +4082,7 @@ input[type="submit"].btn {
   margin-bottom: 0;
   text-align: right;
   background-color: #f5f5f5;
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #ddd;
   -webkit-border-radius: 0 0 6px 6px;
   -moz-border-radius: 0 0 6px 6px;
   border-radius: 0 0 6px 6px;
@@ -4185,7 +4185,7 @@ input[type="submit"].btn {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -4308,7 +4308,7 @@ input[type="submit"].btn {
   display: block;
   padding: 4px;
   line-height: 20px;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -4860,7 +4860,7 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
  */
 body {
   width: 100%;
-  font-family: "Abel", sans-serif;
+  font-family: 'Abel', sans-serif;
   font-weight: normal;
   font-size: 100%;
   height: 100%; }
@@ -4964,7 +4964,7 @@ body {
       color: #fff;
       display: block; }
     .page.panels header #nav li a:active {
-      background-color: #cc0000 !important; }
+      background-color: #c00 !important; }
     .page.panels header #nav span:after {
       width: 0;
       height: 0;
@@ -5079,7 +5079,7 @@ body {
       .page.panels header #search-panels input[type="submit"] {
         color: white;
         background-color: #1faac0;
-        font-family: "Abel", sans-serif;
+        font-family: 'Abel', sans-serif;
         font-weight: normal;
         border-radius: 0;
         height: 26px;
@@ -5461,7 +5461,7 @@ body {
     .page.panels header #nav > a:before,
     .page.panels header #nav > a:after {
       position: absolute;
-      border: 2px solid white;
+      border: 2px solid #fff;
       top: 35%;
       left: 25%;
       right: 25%;
