--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -56,9 +56,13 @@ div.zoom-container div.zoom-hotspots a {
 	/*text-indent: -9999px;*/
 	width: 24px;
 	height: 24px;
-	margin: 0 0 0 0;
-	
+	margin: 0 0 0 0;	
 }
+
+div.zoom-container div.zoom-hotspots a .panel-name{
+	color: #fff;	
+}
+
 div.zoom-container div.zoom-hotspots a.active {
 	background: url("images/hotspot_active.png") no-repeat 0 0;
 	width: 40px;
