--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -49,7 +49,7 @@ div.zoom-container div.zoom-holder .grabbing {
 	cursor: move;
 }
 div.zoom-container div.zoom-hotspots a {
-	background: url("images/hotspot.png") no-repeat 50% 50%;
+	background: url("images/hotspot.png") no-repeat 50% 30%;
 	display: block;
 	overflow: hidden;
 	position: absolute;
@@ -59,8 +59,14 @@ div.zoom-container div.zoom-hotspots a {
 	margin: 0 0 0 0;	
 }
 
-div.zoom-container div.zoom-hotspots a .panel-name{
-	color: #fff;	
+div.zoom-container div.zoom-hotspots a.panel-name {
+	color: #fff;
+	background-color: #7A9945;
+	padding: 5px;	
+}
+
+div.zoom-container div.zoom-hotspots a.panel-name {
+	text-decoration: none;	
 }
 
 div.zoom-container div.zoom-hotspots a.active {
