Styling panel name (number or letter) for panel map mode view.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@541 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -63,7 +63,8 @@ div.zoom-container div.zoom-hotspots a {
 div.zoom-container div.zoom-hotspots a .panel-name {
 	color: #fff;
 	background-color: #7A9945;
-	padding: 5px;	
+	padding: 5px;
+	margin-top: 35%;	
 }
 div.zoom-container div.zoom-hotspots a.active {
 	background: url("images/hotspot_active.png") no-repeat 0 0;
