--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -60,11 +60,10 @@ div.zoom-container div.zoom-hotspots a {
 	text-decoration: none;		
 }
 
-div.zoom-container div.zoom-hotspots a .panel-name {
+div.zoom-container div.zoom-hotspots .panel-name {
 	color: #fff;
 	background-color: #7A9945;
-	padding: 5px;
-	margin-top: 35%;	
+	padding: 5px;	
 }
 div.zoom-container div.zoom-hotspots a.active {
 	background: url("images/hotspot_active.png") no-repeat 0 0;
