--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -48,8 +48,9 @@ div.zoom-container div.zoom-holder .grab {
 div.zoom-container div.zoom-holder .grabbing {
 	cursor: move;
 }
-div.zoom-container div.zoom-hotspots a {
-	background: url("images/hotspot.png") no-repeat 50% 30%;
+
+div.zoom-container div.zoom-hotspots a.hotspot {
+	background: url("images/hotspot.png") no-repeat 50% 50%;
 	display: block;
 	overflow: hidden;
 	position: absolute;
@@ -60,10 +61,13 @@ div.zoom-container div.zoom-hotspots a {
 	text-decoration: none;		
 }
 
-div.zoom-container div.zoom-hotspots .panel-name {
+div.zoom-container div.zoom-hotspots a.panel-name {
 	color: #fff;
 	background-color: #7A9945;
-	padding: 5px;	
+	padding: 5px;
+	margin-top: 35%;
+	display: inline-block;
+	width: auto;	
 }
 div.zoom-container div.zoom-hotspots a.active {
 	background: url("images/hotspot_active.png") no-repeat 0 0;
