--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -49,7 +49,7 @@ div.zoom-container div.zoom-holder .grabbing {
 	cursor: move;
 }
 
-div.zoom-container div.zoom-hotspots a.hotspot {
+div.zoom-container div.zoom-hotspots a {
 	background: url("images/hotspot.png") no-repeat 50% 50%;
 	display: block;
 	overflow: hidden;
@@ -61,7 +61,7 @@ div.zoom-container div.zoom-hotspots a.hotspot {
 	text-decoration: none;		
 }
 
-div.zoom-container div.zoom-hotspots a.panel-name {
+div.zoom-container div.zoom-hotspots a .panel-name {
 	color: #fff;
 	background-color: #7A9945;
 	padding: 5px;
