toggle for hiding/showing carousel of panels.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@546 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5088,6 +5088,14 @@ body {
         padding-left: 10px;
         padding-right: 10px; }
 
+.carousel-toggle {
+  width: 70px;
+  padding: 5px;
+  color: #fff;
+  background-color: green;
+  position: absolute;
+  left: 50%; }
+
 .carousel-left-limit {
   height: 220px;
   width: 80px;
