--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -335,6 +335,15 @@ body {
 	}*/
 }
 
+.carousel-toggle {
+	width: 70px;
+	padding: 5px;
+	color: #fff;
+	background-color: green;
+	position: absolute;
+	left: 50%;
+}
+
 //Carousel
 .carousel-left-limit {
 	
