toggle for hiding/showing carousel of panels.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@547 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5089,12 +5089,14 @@ body {
         padding-right: 10px; }
 
 .carousel-toggle {
-  width: 70px;
-  padding: 5px;
-  color: #fff;
   background-color: green;
+  color: #FFFFFF;
+  left: 50%;
+  padding: 5px;
   position: absolute;
-  left: 50%; }
+  text-align: center;
+  width: 40px;
+  z-index: 2; }
 
 .carousel-left-limit {
   height: 220px;
