--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -336,12 +336,14 @@ body {
 }
 
 .carousel-toggle {
-	width: 70px;
-	padding: 5px;
-	color: #fff;
 	background-color: green;
-	position: absolute;
-	left: 50%;
+   color: #FFFFFF;
+   left: 50%;
+   padding: 5px;
+   position: absolute;
+   text-align: center;
+   width: 40px;
+   z-index: 2;
 }
 
 //Carousel
