--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -50,7 +50,7 @@ div.zoom-container div.zoom-holder .grabbing {
 }
 
 div.zoom-container div.zoom-hotspots a {
-	background: url("images/hotspot.png") no-repeat 50% 50%;
+	//background: url("images/hotspot.png") no-repeat 50% 50%;
 	display: block;
 	overflow: hidden;
 	position: absolute;
@@ -61,16 +61,15 @@ div.zoom-container div.zoom-hotspots a {
 	text-decoration: none;		
 }
 
-div.zoom-container div.zoom-hotspots a .panel-name {
+div.zoom-container div.zoom-hotspots a .panel-number {
 	color: #fff;
 	background-color: #7A9945;
 	padding: 5px;
-	margin-top: 45%;
 	display: inline-block;
 	width: auto;	
 }
 div.zoom-container div.zoom-hotspots a.active {
-	background: url("images/hotspot_active.png") no-repeat 0 0;
+	//background: url("images/hotspot_active.png") no-repeat 0 0;
 	width: 40px;
 	height: 40px;
 	margin: -15px 0 0 -15px;
