Change hotspot look and feel, buy adding image reference number or letter.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@560 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -55,8 +55,8 @@ div.zoom-container div.zoom-hotspots a {
 	overflow: hidden;
 	position: absolute;
 	/*text-indent: -9999px;*/
-	width: 24px;
-	height: 24px;
+	//width: 24px;
+	//height: 24px;
 	margin: 0 0 0 0;
 	text-decoration: none;		
 }
