Change hotspot look and feel, buy adding image reference number or letter.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@562 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -67,6 +67,8 @@ div.zoom-container div.zoom-hotspots a .panel-number {
 	padding: 5px;
 	display: inline-block;
 	width: auto;	
+	font-size: 1.5em;
+	opacity: .8;
 }
 div.zoom-container div.zoom-hotspots a.active {
 	/*background: url("images/hotspot_active.png") no-repeat 0 0;*/
