--- a/css/panels.css
+++ b/css/panels.css
@@ -5301,6 +5301,7 @@ body {
       color: #fff;
       text-decoration: none;
       margin-left: 20px;
+      margin-right: 20px;
       clear: both;
       width: auto; }
   .panels-display nav {
