--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -637,6 +637,7 @@ body {
 			color: #fff;
 			text-decoration: none;	
 			margin-left: 20px;
+			margin-right: 20px;
 			clear: both;
 			width: auto;
 		}
