Add border color to label number.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@567 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -69,6 +69,7 @@ div.zoom-container div.zoom-hotspots a .panel-number {
 	width: auto;	
 	font-size: 1.1em;
 	opacity: .8;
+	border: 1px solid #cfcfcf;
 }
 div.zoom-container div.zoom-hotspots a.active {
 	/*background: url("images/hotspot_active.png") no-repeat 0 0;*/
