--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -75,7 +75,7 @@ div.zoom-container div.zoom-hotspots a.active {
 	/*background: url("images/hotspot_active.png") no-repeat 0 0;*/
 	width: 40px;
 	height: 40px;
-	margin: -15px 0 0 -15px;
+	//margin: -15px 0 0 -15px;
 }
 div.zoom-container div.zoom-navigation {
 	right: 0;
